<?xml version="1.0" standalone="no"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>gov.iti.jets</groupId>
    <artifactId>ChatAppTalkey</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <groupId>gov.iti.jets</groupId>
  <artifactId>client</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>client</name>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>gov.iti.jets</groupId>
      <artifactId>common</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
    </dependency>

  </dependencies>



  <build>
    <plugins>
      <plugin>

        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>

        <configuration>
          <release>17</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>gov.iti.jets.client.Main</mainClass>
          <cleanupDaemonThreads>false</cleanupDaemonThreads>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.3</version>
        <configuration>
          <mainClass>gov.iti.jets.client.Main</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>  
</project>
